@@ -175,7 +175,7 @@ Resources:
         DatabaseClusterSubnetOne: {"Fn::Select": [0, { "Fn::Split" : [",", {"Fn::ImportValue" : {"Fn::Sub" : "${NetworkStackNameParameter}-PrivateSubnets"}}] }]}
         DatabaseClusterSubnetTwo: {"Fn::Select": [1, { "Fn::Split" : [",", {"Fn::ImportValue" : {"Fn::Sub" : "${NetworkStackNameParameter}-PrivateSubnets"}}] }]}
       TemplateURL: !Sub
-        - https://aws-hpc-recipes.s3.${AWS::Region}.${AWS::URLSuffix}/${Version}/recipes/db/slurm_accounting_db/assets/serverless-database.yaml
+        - https://aws-hpc-recipes.s3.us-east-1.amazonaws.com/${Version}/recipes/db/slurm_accounting_db/assets/serverless-database.yaml
         - { Version: !FindInMap [Recipes, Constants, Version] }
       TimeoutInMinutes: 60  
 
@@ -204,7 +204,7 @@ Resources:
           CustomActions:
             OnNodeConfigured:
               Script: !Sub
-                - https://aws-hpc-recipes.s3.${AWS::Region}.${AWS::URLSuffix}/${Version}/recipes/pcluster/slurm_accounting_with_email/assets/postinstall.sh
+                - https://aws-hpc-recipes.s3.us-east-1.amazonaws.com/${Version}/recipes/pcluster/slurm_accounting_with_email/assets/postinstall.sh
                 - { Version: !FindInMap [Recipes, Constants, Version] }
               Args:
                 - "-c"
